--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,22 @@
     "require": {
         "symfony/http-foundation": "^5.3",
         "symfony/routing": "^5.3"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
     }
 }
